# rf24drone

./: .gitignore  CMakeLists.txt  README.md  currentDrone.md  drone  duplex_test.cpp  mpu_receive_test.cpp  mpu_send_test.cpp  packets_test.cpp  test.cpp
examples/: mpu_terminal  mpu_terminal.cpp
include/: aes128.hpp  drone.hpp  mpu6050.hpp  packets.hpp  radio.hpp
src/: drone.cpp  drone_cpp.old  main.cpp  mpu6050.cpp  radio.cpp  simple_main.cpp
test/: duplex_test
